--- a/设计文档/建筑/0.md
+++ b/设计文档/建筑/0.md
@@ -350,8 +350,9 @@ m`军事类建筑`
 2. 步兵系单位**防御力+20%**。
 3. 步兵系单位**预备役规模+20%**。
 4. 步兵系单位**造价-10%**。
-5. 步兵系单位**补给要求-10%**。
-6. 步兵系单位**提供的生产力+10%**。
+5. 步兵系单位**生产时间-10%**。
+
+
 
 !!! warning 注意
     兵营的升级不是科技，与其他建筑一样，当兵营被摧毁后，其提供的所有增益效果将全部消失。
@@ -409,11 +410,11 @@ m`军事类建筑`
 建成后的基础增益包括：  
 
 1. 弓弩系单位**攻击力+10%**。
-2. 弓弩系单位**移动速度+20%**。
+2. 弓弩系单位**移动速度+10%**。
 3. 弓弩系单位**精准度+20%**。
 4. 弓弩系单位**防御力+5%**。
 5. 弓弩系单位**造价-10%**。
-6. 弓弩系单位命中目标时，将对目标造成持续**20%攻击间隔时间的-20%移动速度**效果。
+6. ~~弓弩系单位命中目标时，将对目标造成持续**20%攻击间隔时间的-20%移动速度**效果。~~
 
 !!! warning 注意
     靶场的升级不是科技，与其他建筑一样，当靶场被摧毁后，其提供的所有增益效果将全部消失。
@@ -424,7 +425,7 @@ m`军事类建筑`
 
 | 升级方向     | LV1  | LV2  | LV3  |
 | ------------ | :--: | :--: | :--: |
-| **移动速度** | +20% | +10% | +10% |
+| **移动速度** | +10% | +5% | +5% |
 | **精准度**   | +20% | +10% | +10% |
 | **攻击力**   | +10% | +5%  | +5%  |
 
@@ -473,9 +474,9 @@ m`军事类建筑`
 1. 骑兵系单位**攻击力+10%**。
 2. 骑兵系单位**移动速度+20%**。
 3. 骑兵系单位**造价-10%**。
-4. 骑兵系单位**预备役规模+10%**。
-5. 骑兵系单位**对弓箭手伤害+20%**。
-6. 若骑兵系单位接触敌人时速度不低于其最大速度的75%，将立即对敌人造成**110%的攻击伤害**。
+4. 骑兵系单位**预备役规模+20%**。
+5. ~~骑兵系单位**对弓箭手伤害+20%**。~~
+6. ~~若骑兵系单位接触敌人时速度不低于其最大速度的75%，将立即对敌人造成**110%的攻击伤害**。~~
 
 !!! warning 注意
     马厩的升级不是科技，与其他建筑一样，当马厩被摧毁后，其提供的所有增益效果将全部消失。
@@ -487,7 +488,7 @@ m`军事类建筑`
 | 升级方向     | LV1  | LV2  | LV3  |
 | ------------ | :--: | :--: | :--: |
 | **移动速度** | +20% | +10% | +10% |
-| **攻击间隔** | -20% | -10% | -10% |
+| **生产时间** | -20% | -10% | -10% |
 | **造价**     | -10% | -5%  | -5%  |
 
 不同升级的花销：
@@ -495,14 +496,14 @@ m`军事类建筑`
 | 升级方向     |     LV1      |      LV2      |     LV3      |
 | ------------ | :----------: | :-----------: | :----------: |
 | **移动速度** | (20金 + 15s) | (10金 + 7.5s) | (10金 + 10s) |
-| **攻击间隔** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
+| **生产时间** |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 | **造价**     |      ^       | (10金 + 7.5s) | (10金 + 10s) |
 
 升级能提供的基本数值属性增益：
 | 升级方向     | LV1 |  LV2   |  LV3   |
 | ------------ | :-: | :----: | :----: |
 | **移动速度** | --  | +30%HP | +15%HP |
-| **攻击间隔** |  ^  | +20%HP | +15%HP |
+| **生产时间** |  ^  | +20%HP | +15%HP |
 | **造价**     |  ^  | +10%HP | +10%HP |
 
 |***
@@ -536,8 +537,8 @@ m`军事类建筑`
 2. 攻城武器系与火药系单位**精准度+10%**。
 3. 攻城武器系与火药系单位**造价-10%**。
 4. 攻城武器系与火药系单位**生产时间-15%**。
-5. 当有不少于三名火药系单位集群战斗时，他们的**精准度+50%**。
-6. 在攻城武器系单位附近的步兵系单位**攻击力+30%**。
+5. ~~当有不少于三名火药系单位集群战斗时，他们的**精准度~~+50%**。
+6. ~~在攻城武器系单位附近的步兵系单位**攻击力+30%**。~~
 
 !!! warning 注意
     兵工厂的升级不是科技，与其他建筑一样，当兵工厂被摧毁后，其提供的所有增益效果将全部消失。
@@ -594,8 +595,7 @@ m`军事类建筑`
 学院建成后，可以为科技研发提供增益效果，包括：
 
 1. 生产力能够提供更大的科技研究速率。
-2. 当玩家有处于研发状态的科技时，玩家的生产力+20%。
-3. 当玩家将科技树上所有科技研发完毕时，玩家的生产力+30%。
+2. 每个研发完成的科技可以为玩家+1生产力。
 
 !!! tip 提示
     学院的功能服务于科技研发，若玩家已不再需要研发科技时，可以考虑将其拆除。
@@ -649,7 +649,7 @@ m`军事类建筑`
 市场建成后，可以为资源互换增益效果，包括：
 
 1. 食物、黄金两种资源互换的**税率更低**。
-2. 黄金能产生其数量**10%的生产力**。
+2. ~~资源能产生其数量**10%的生产力**。~~
 
 #### 升级 {ignore=true}
 
@@ -657,7 +657,7 @@ m`军事类建筑`
 
 | 升级方向 | LV1  | LV2  |   LV3    |
 | -------- | :--: | :--: | :------: |
-| **税率** | -50% | -50% | 无互换税 |
+| **税率** | -0.1 | -0.1 | 无互换税 |
 
 不同升级的花销：
 
