--- a/设计文档/建筑/0.md
+++ b/设计文档/建筑/0.md
@@ -660,7 +660,7 @@ m`军事类建筑`
 | **税率** | -0.1 | -0.1 | 无互换税 |
 
 不同升级的花销：
-
+true
 | 升级方向 |     LV1      |    LV2     |    LV3     |
 | -------- | :----------: | :--------: | :--------: |
 | **税率** | (12金 + 10s) | (5金 + 7s) | (5金 + 7s) |
