--- a/设计文档/文明/0.md
+++ b/设计文档/文明/0.md
@@ -1,3 +1,10 @@
+---
+id: "civilization"
+print_background: true
+
+---
+@import "../my-style.less"
+
 # 文明
 
 **文明**即具有不同特色的一系列数值及机制配置。  
@@ -17,11 +24,78 @@
 |  阿拉伯帝国  | **<span style="color:#4EC5F1">宗教</span>**~宗教单位加成~、**<span style="color:#4EC5F1">贸易</span>**~落后时可获得加成~ |
 |  奥斯曼帝国  | **<span style="color:#4EC5F1">征服</span>**~进攻加成~、**<span style="color:#4EC5F1">扩张</span>**~建造加成~             |
 
-## 中国
+## 大明
 
 ### 科技
 
-中国的马厩缺少升级
+!!! note 大明科技树
+    ``` dot{style="zoom:0.7"}
+  	digraph G {
+	rankdir=LR ranksep=1
+	"0016.手推车" [label="0016.手推车|{<f0>20秒| <f1>[10, 20] 黄金 }|提高工人速度\l减少卸货时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0017.水利" [label="0017.水利|{<f0>20秒| <f1>[10, 20] 黄金 }|提高食物采集量\l降低食物采集时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0017.水利":w [len=2.00]
+	"0019.采矿" [label="0019.采矿|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l降低矿物采集时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0019.采矿":w [len=2.00]
+	"0018.行政机构" [label="0018.行政机构|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人人口上限\l提高工人生产速度\l\+\>【仓库】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0018.行政机构":w [len=2.00]
+	"0020.农学" [label="0020.农学|{<f0>10秒| <f1>[10, 20] 黄金 }|提高食物采集量\l\+\>【农庄】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0017.水利":e -> "0020.农学":w [len=2.00]
+	"0018.行政机构":e -> "0020.农学":w [len=2.00]
+	"0023.历法" [label="0023.历法|{<f0>10秒| <f1>[10, 20] 黄金 }|提高食物采集量\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0020.农学":e -> "0023.历法":w [len=2.00]
+	"0034.农政全书" [label="0034.农政全书|{<f0>10秒| <f1>[10, 20] 黄金 }|提高食物采集量\l采集食物的工人全额提供生产力\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0023.历法":e -> "0034.农政全书":w [len=2.00]
+	"0022.矿井勘探" [label="0022.矿井勘探|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l\+\>【矿场】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0019.采矿":e -> "0022.矿井勘探":w [len=2.00]
+	"0018.行政机构":e -> "0022.矿井勘探":w [len=2.00]
+	"0025.化学" [label="0025.化学|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0022.矿井勘探":e -> "0025.化学":w [len=2.00]
+	"0036.天工开物" [label="0036.天工开物|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人移动速度\l提高工人工作速度\l提高矿物采集量\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0025.化学":e -> "0036.天工开物":w [len=2.00]
+	"0021.教育" [label="0021.教育|{<f0>10秒| <f1>[10, 20] 黄金 }|提高科研速度\l提高单位生产力\l提高工人人口上限\l提高军事人口上限\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0018.行政机构":e -> "0021.教育":w [len=2.00]
+	"0024.经济" [label="0024.经济|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人人口上限\l提高军事人口上限\l提高单位生产力\l\+\>【市场】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0021.教育":e -> "0024.经济":w [len=2.00]
+	"0037.资本主义萌芽" [label="0037.资本主义萌芽|{<f0>10秒| <f1>[10, 20] 黄金 }|提高建筑速度\l提高单位生产力\l提高工人人口上限\l提高军事人口上限\l提高单位生产速度\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0036.天工开物":e -> "0037.资本主义萌芽":w [len=2.00]
+	"0034.农政全书":e -> "0037.资本主义萌芽":w [len=2.00]
+	"0024.经济":e -> "0037.资本主义萌芽":w [len=2.00]
+	"0035.军事训练" [label="0035.军事训练|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【民兵】\l\+\>【刀剑手】\l\+\>【长矛兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术" [label="0006.战术|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【弓箭手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0035.军事训练":e -> "0006.战术":w [len=2.00]
+	"0008.马镫" [label="0008.马镫|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【骑兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术":e -> "0008.马镫":w [len=2.00]
+	"0010.军事工程" [label="0010.军事工程|{<f0>30秒| <f1>[10, 20] 黄金 }|\+\>【城墙】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0008.马镫":e -> "0010.军事工程":w [len=2.00]
+	"0012.攻城器械" [label="0012.攻城器械|{<f0>30秒| <f1>[10, 20] 黄金 }|\+\>【冲车】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0010.军事工程":e -> "0012.攻城器械":w [len=2.00]
+	"0029.火药" [label="0029.火药|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【长矛兵】\l\+\>【梨花枪兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术":e -> "0029.火药":w [len=2.00]
+	"0030.神机营" [label="0030.神机营|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【火门枪手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0029.火药":e -> "0030.神机营":w [len=2.00]
+	"0031.纪效新书" [label="0031.纪效新书|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【火门枪手】\l\+\>【三眼铳兵】\l\+\>【火枪手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0030.神机营":e -> "0031.纪效新书":w [len=2.00]
+	"0032.虎蹲炮" [label="0032.虎蹲炮|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【虎蹲炮】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0031.纪效新书":e -> "0032.虎蹲炮":w [len=2.00]
+	"0007.常备军" [label="0007.常备军|{<f0>30秒| <f1>[10, 20] 黄金 }|提高步兵攻击力\l提高步兵防御力\l\+\>【兵营】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0035.军事训练":e -> "0007.常备军":w [len=2.00]
+	"0033.诸葛连弩" [label="0033.诸葛连弩|{<f0>30秒| <f1>[10, 20] 黄金 }|\X\>【弓箭手】\l\+\>【诸葛连弩】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术":e -> "0033.诸葛连弩":w [len=2.00]
+	"0009.复合弓" [label="0009.复合弓|{<f0>30秒| <f1>[10, 20] 黄金 }|提高远程单位攻击力\l提高射击距离\l\+\>【靶场】\l\+\>【驻防点】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0033.诸葛连弩":e -> "0009.复合弓":w [len=2.00]
+	"0014.军事技术" [label="0014.军事技术|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻城器械生产速度\l降低攻城器械价格\l\+\>【兵工厂】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0012.攻城器械":e -> "0014.军事技术":w [len=2.00]
+	"0000.手工业" [label="0000.手工业|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻击力\l提高防御力\l\+\>【铁匠铺】\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0001.铸造" [label="0001.铸造|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻击力\l提高攻击速度\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0000.手工业":e -> "0001.铸造":w [len=2.00]
+	"0028.棉甲" [label="0028.棉甲|{<f0>30秒| <f1>[10, 20] 黄金 }|提高防御力\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0000.手工业":e -> "0028.棉甲":w [len=2.00]
+	}
+
+
+    ```
+
 
 ### 战术打法
 
@@ -67,3 +141,196 @@
     ```
     灰色表示初始单位，紫色表示需要进行科技研发才可获得的单位，橙色表示不可再升级单位。
     
+### 独特效果
+
+* `万里长城`所有拒马+30%HP
+
+* `天朝大国`开局工人+1
+
+* `科举考试`+2政策槽位
+* `宗庙制度`开局获得政策**宗族观念**
+* `厂卫制度`开局获得政策**厂卫制度**
+
+
+### 独特政策
+
+| 名称  | 效果   | 占用槽位   |
+|-------------- | -------------- | -------------- |
+| 海禁制度    | 所有拒马HP上限+50%，但科技发展速度-30%     | 3     |
+| 朝贡体系    | 所有占领的村庄每15秒生产2点黄金     | 4     |
+| 西学东渐    | 当敌方科技研发数量大于我方时，科技研发成本-30%     | 3     |
+| 厂卫制度    | 敌方向我方已占领村庄施加的影响力-50%     | 3     |
+| 一条鞭法    | 工人生产力+100%，食物能提供其总量10%的生产力     | 4     |
+
+## 法兰西
+    
+### 独特效果
+
+* `朕即国家`抽取政策池由3个变为4个
+  
+* m`骑士精神`骑兵系士兵+20%体力值
+  
+* `三级会议`开局获得政策**三级会议**
+  
+* `富农经济`采集黄金的工人速度+30%。
+
+### 独特政策
+
+| 名称  | 效果   | 占用槽位   |
+|-------------- | -------------- | -------------- |
+| 重商主义    | 无资源兑换损耗，但工人、士兵的生产速度-50%     | 2     |
+| 炮兵改革    | 火炮的攻击力+30%,移动速度+30%，造价+100%     | 4     |
+| 雇佣兵制    | 无需向士兵支付维护费，但士兵造价+50%     | 3     |
+| 三级会议    | 敌人士兵越过战场中线后，工人采集的资源量+1。     | 3     |
+
+### 科技
+
+!!! note 法兰西科技树
+    ``` dot{style="zoom:0.7"}
+  	
+	digraph G {
+	rankdir=LR ranksep=1
+	"0016.手推车" [label="0016.手推车|{<f0>20秒| <f1>[10, 20] 黄金 }|提高工人速度\l减少卸货时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0017.水利" [label="0017.水利|{<f0>20秒| <f1>[10, 20] 黄金 }|提高食物采集量\l降低食物采集时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0017.水利":w [len=2.00]
+	"0019.采矿" [label="0019.采矿|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l降低矿物采集时间\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0019.采矿":w [len=2.00]
+	"0018.行政机构" [label="0018.行政机构|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人人口上限\l提高工人生产速度\l\+\>【仓库】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0016.手推车":e -> "0018.行政机构":w [len=2.00]
+	"0020.农学" [label="0020.农学|{<f0>10秒| <f1>[10, 20] 黄金 }|提高食物采集量\l\+\>【农庄】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0017.水利":e -> "0020.农学":w [len=2.00]
+	"0018.行政机构":e -> "0020.农学":w [len=2.00]
+	"0022.矿井勘探" [label="0022.矿井勘探|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l\+\>【矿场】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0019.采矿":e -> "0022.矿井勘探":w [len=2.00]
+	"0018.行政机构":e -> "0022.矿井勘探":w [len=2.00]
+	"0025.化学" [label="0025.化学|{<f0>10秒| <f1>[10, 20] 黄金 }|提高矿物采集量\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0022.矿井勘探":e -> "0025.化学":w [len=2.00]
+	"0021.教育" [label="0021.教育|{<f0>10秒| <f1>[10, 20] 黄金 }|提高科研速度\l提高单位生产力\l提高工人人口上限\l提高军事人口上限\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0018.行政机构":e -> "0021.教育":w [len=2.00]
+	"0024.经济" [label="0024.经济|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人人口上限\l提高军事人口上限\l提高单位生产力\l\+\>【市场】\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0021.教育":e -> "0024.经济":w [len=2.00]
+	"0026.工程技术" [label="0026.工程技术|{<f0>10秒| <f1>[10, 20] 黄金 }|提高建筑速度\l提高单位生产力\l提高工人人口上限\l提高军事人口上限\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0024.经济":e -> "0026.工程技术":w [len=2.00]
+	"0044.启蒙运动" [label="0044.启蒙运动|{<f0>10秒| <f1>[10, 20] 黄金 }|提高工人人口上限\l提高军事人口上限\l提高单位生产力\l+2政策槽位\l" fillcolor="#ffaa00" fontname=SimSun shape=record style=filled]
+	"0026.工程技术":e -> "0044.启蒙运动":w [len=2.00]
+	"0020.农学":e -> "0044.启蒙运动":w [len=2.00]
+	"0025.化学":e -> "0044.启蒙运动":w [len=2.00]
+	"0038.军事训练" [label="0038.军事训练|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【民兵】\l\+\>【盾牌手】\l\+\>【长矛兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术" [label="0006.战术|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【弓箭手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0038.军事训练":e -> "0006.战术":w [len=2.00]
+	"0008.马镫" [label="0008.马镫|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【骑兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0038.军事训练":e -> "0008.马镫":w [len=2.00]
+	"0039.骑士制度" [label="0039.骑士制度|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【骑兵】\l\+\>【轻骑兵】\l\+\>【重骑兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0008.马镫":e -> "0039.骑士制度":w [len=2.00]
+	"0042.宪兵" [label="0042.宪兵|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【重骑兵】\l\+\>【鸢尾花骑兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0039.骑士制度":e -> "0042.宪兵":w [len=2.00]
+	"0010.军事工程" [label="0010.军事工程|{<f0>30秒| <f1>[10, 20] 黄金 }|\+\>【驻防点】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0006.战术":e -> "0010.军事工程":w [len=2.00]
+	"0040.近卫兵团" [label="0040.近卫兵团|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【长矛兵】\l\+\>【法兰西近卫兵】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0010.军事工程":e -> "0040.近卫兵团":w [len=2.00]
+	"0013.火药" [label="0013.火药|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【火枪手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0040.近卫兵团":e -> "0013.火药":w [len=2.00]
+	"0041.刺刀" [label="0041.刺刀|{<f0>20秒| <f1>[10, 20] 黄金 }|\X\>【火枪手】\l\+\>【刺刀火枪手】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0013.火药":e -> "0041.刺刀":w [len=2.00]
+	"0015.火炮" [label="0015.火炮|{<f0>20秒| <f1>[10, 20] 黄金 }|\+\>【火炮】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0013.火药":e -> "0015.火炮":w [len=2.00]
+	"0011.马匹育种" [label="0011.马匹育种|{<f0>30秒| <f1>[10, 20] 黄金 }|提高骑兵速度\l降低骑兵价格\l\+\>【马厩】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0042.宪兵":e -> "0011.马匹育种":w [len=2.00]
+	"0014.军事技术" [label="0014.军事技术|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻城器械生产速度\l降低攻城器械价格\l\+\>【兵工厂】\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0015.火炮":e -> "0014.军事技术":w [len=2.00]
+	"0043.弹道学" [label="0043.弹道学|{<f0>30秒| <f1>[10, 20] 黄金 }|提高火炮射程\l提高火炮攻击力\l提高火炮速度\l" fillcolor="#228dff" fontname=SimSun shape=record style=filled]
+	"0015.火炮":e -> "0043.弹道学":w [len=2.00]
+	"0000.手工业" [label="0000.手工业|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻击力\l提高防御力\l\+\>【铁匠铺】\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0001.铸造" [label="0001.铸造|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻击力\l提高攻击速度\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0000.手工业":e -> "0001.铸造":w [len=2.00]
+	"0002.冶金" [label="0002.冶金|{<f0>30秒| <f1>[10, 20] 黄金 }|提高攻击力\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0001.铸造":e -> "0002.冶金":w [len=2.00]
+	"0003.锁子甲" [label="0003.锁子甲|{<f0>30秒| <f1>[10, 20] 黄金 }|提高防御力\l提高速度\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0000.手工业":e -> "0003.锁子甲":w [len=2.00]
+	"0004.板甲" [label="0004.板甲|{<f0>30秒| <f1>[10, 20] 黄金 }|提高防御力\l" fillcolor="#65d84b" fontname=SimSun shape=record style=filled]
+	"0003.锁子甲":e -> "0004.板甲":w [len=2.00]
+	}
+
+
+    ```
+
+### 兵种
+
+以下单位为<span style="color:#4EC5F1"> 蓝色 </span>的表示在**科技树完全研发**后拥有的兵种，为<span style="color:#eb4c4c"> 红色 </span>的表示为文明独有兵种。
+
+| 名称                                        | 特点                                                                | 造价范围 | 文明战术定位               |
+| ------------------------------------------- | ------------------------------------------------------------------- | -------- | -------------------------- |
+| 民兵                                        | 极低的攻击力与防御力                                                | 便宜     | 初期唯一战斗单位           |
+|<span style="color:#4EC5F1">盾牌手</span>|**替代民兵**，高防御力，移速慢，低攻击力|稍贵|肉盾|
+| 长矛兵   | **替代民兵**，较大的攻击范围，攻击时可降低敌人移速                                | 便宜     | 大头兵         |
+| <span style="color:#4EC5F1">弓箭手</span>                                      | 远程攻击，白板弓弩系单位                                            | 中等     | 普通的远程攻击单位         |
+| 骑兵     | 高移速，较大攻击力，白板骑兵系单位                                            | 中等     | 机动、推进         |
+| <span style="color:#4EC5F1">轻骑兵</span>     | **替代骑兵**，移速更高，较小攻击力                                            | 中等     | 机动、骚扰        |
+| 重骑兵     | **替代骑兵**，移速稍慢，较大攻击力，结实耐操，带冲击伤害                                            | 昂贵     | 肉盾、推进         |
+| 火枪手   | 高攻击力，训练速度快，射击间隔长，低防御力        | 稍贵     | 克制高防御单位     |
+| <span style="color:#4EC5F1">火炮</span>|极高攻击力，范围伤害，射击间隔长，低防御力，低移速|昂贵|攻击士兵群、建筑|
+| <span style="color:#eb4c4c">法兰西近卫兵</span> | **替代长矛兵**，攻击力更强、速度更快的长矛兵。 | 稍贵     | 法国后期性价比高的近战输出力量。         |
+| <span style="color:#eb4c4c">刺刀火枪手</span> | **替代火枪手**，同时具备近身战斗与远程战斗能力的火药单位。 | 稍贵     | 同时具备远程与近战功能，能在骑兵冲锋死亡后保持战斗能力         |
+| <span style="color:#eb4c4c">鸢尾花骑兵</span> | **替代重骑兵**，速度稍快、攻击力防御力更高，具有更大的冲击力。 | 昂贵     | 前排肉盾兼输出，为火枪手拉开安全距离        |
+
+## 神圣罗马帝国
+
+银行业
+公司制度
+新税制度
+
+### 独特效果
+
+* 宗教改革：（）
+* 帝国选侯：占领村庄后，每过一段时间村庄将自动生成一定数量的士兵
+
+
+## 拜占庭
+
+开局黄金稍多。
+
+### 独特效果
+
+* m`军区制度` 开局时则士兵、建筑的防御力+30%。但每被摧毁一个拒马，士兵、建筑的防御力将-10%。
+  
+* `正统权威`政策冷却时间-50%，我方单位向村庄施加影响力+20%。  
+  
+* `贸易控制`开局获得政策**对外贸易**、**铸币权**。
+  
+* m`罗马军团` 开局获得政策**军团战术**。  
+
+### 独特政策
+
+| 名称  | 效果   | 占用槽位   |
+|-------------- | -------------- | -------------- |
+| 蛮族佣兵    | 用**瓦兰吉卫队**替换民兵或刀剑手     | 2     |
+| 世袭兵役    | 生产单位的速度+50%，但生产力-20%     | 3     |
+| 静修主义    | 僧侣和牧首的治疗效率+30%，但移动速度-20%     | 3     |
+| 工商管控    | 工人资源携带量+100%，但科技研发速度-30%。     | 4     |
+| 宣称正统    | 若占领全部村庄，则生产力+30%，士兵防御力+30%；否则生产力-40%，士兵攻击力-40%。     | 4     |
+
+### 兵种
+
+以下单位为<span style="color:#4EC5F1"> 蓝色 </span>的表示在**科技树完全研发**后拥有的兵种，为<span style="color:#eb4c4c"> 红色 </span>的表示为文明独有兵种。
+
+| 名称                                        | 特点                                                                | 造价范围 | 文明战术定位               |
+| ------------------------------------------- | ------------------------------------------------------------------- | -------- | -------------------------- |
+| 民兵                                        | 极低的攻击力与防御力                                                | 便宜     | 初期唯一战斗单位           |
+|<span style="color:#4EC5F1">盾牌手</span>|**替代民兵**，高防御力，移速慢，低攻击力|稍贵|肉盾|
+| <span style="color:#4EC5F1">刀剑手</span>   | **替代民兵**，战斗力一般，白板步兵                                  | 便宜     | 普通的近战单位，便宜，量大 |
+| 弓箭手                                      | 远程攻击，白板弓弩系单位                                            | 中等     | 普通的远程攻击单位         |
+| 骑兵     | 高移速，较大攻击力，白板骑兵系单位                                            | 中等     | 机动、推进         |
+| 重骑兵     | **替代骑兵**，移速稍慢，较大攻击力，结实耐操，带冲击伤害                                            | 昂贵     | 肉盾、推进         |
+| 僧侣     | 无战斗能力，能恢复周围最近一名士兵单位的生命值。                                            | 稍贵     | 奶妈         |
+| <span style="color:#4EC5F1">冲车</span>     | 近战攻城单位，高防御力，移速慢，对建筑有攻击加成，对士兵无攻击力    | 稍贵     | 建筑攻击单位，拜占庭的主力攻城单位               |
+| <span style="color:#eb4c4c">甲胄骑兵</span> | **替代重骑兵**，防御力更高的重骑兵、移动速度稍低。 | 昂贵     | 拜占庭前排核心单位。         |
+| <span style="color:#eb4c4c">瓦兰吉卫队</span> | **替代民兵或刀剑手**，不消耗补给，攻击力更高，防御力稍低。 | 昂贵     | 拜占庭的主力步兵替换单位。         |
+| <span style="color:#eb4c4c">希腊火喷射手</span> | 能持续喷出火焰造成范围伤害，射程短，死亡后能在地面生成一段时间的火焰并对经过的敌方单位造成伤害。 | 昂贵     | 防御性近远程单位         |
+| <span style="color:#eb4c4c">希腊火掷弹兵</span> | **替代弓箭手**，射程较短，能造成范围伤害，且落点能形成一段时间的火焰并对经过的敌方单位造成伤害。  | 稍贵     | 进攻性近远程单位         |
+| <span style="color:#eb4c4c">牧首</span> | **替代僧侣**，无战斗能力，能恢复范围内所有士兵单位的生命值。 | 昂贵     | 高级奶妈        |
+
+### 独特建筑
+| 名称  | 效果   | 升级方向   |
+|-------------- | -------------- | -------------- |
+| 石墙    | 替换**栅栏**，生命值、防御力更高     | 生命值     |
+| 圣索菲亚大教堂    | 极为昂贵且耗时极长的奇观建筑，能产出黄金和食物，提高单位的攻击力、防御力、速度，为生产力提供加成，提高预备役数量和人口上限。     | 资源产出效率、战斗力加成、建筑防御力与生命值     |
