--- a/设计文档/文明/0.md
+++ b/设计文档/文明/0.md
@@ -303,10 +303,10 @@ print_background: true
 
 | 名称  | 效果   | 占用槽位   |
 |-------------- | -------------- | -------------- |
-| 蛮族佣兵    | 用**瓦兰吉卫队**替换民兵或刀剑手     | 2     |
+| 蛮族佣兵    | 用**瓦兰吉卫队**替换民兵或刀剑手，但其他单位的补给消耗速度+20%     | 2     |
 | 世袭兵役    | 生产单位的速度+50%，但生产力-20%     | 3     |
 | 静修主义    | 僧侣和牧首的治疗效率+30%，但移动速度-20%     | 3     |
-| 工商管控    | 工人资源携带量+100%，但科技研发速度-30%。     | 4     |
+| 贸易控制    | 基地塔的金币税收效率+100%，但科技研发速度-30%。     | 4     |
 | 宣称正统    | 若占领全部村庄，则生产力+30%，士兵防御力+30%；否则生产力-40%，士兵攻击力-40%。     | 4     |
 
 ### 兵种
